--- a/LVS_Frontend/src/styles.css
+++ b/LVS_Frontend/src/styles.css
@@ -1,1 +1,164 @@
-/* You can add global styles to this file, and also import other style files */
+/*
+    Variables
+*/
+
+:root {
+    --white-background: #fafafa;
+    --content-panel: #e4e5f1;
+    --button: #484b6a;
+    --table-row-1: #d2d3db;
+    --table-row-2: #9394a5;
+}
+
+
+
+
+
+
+
+header {
+    text-align: center;
+    margin-bottom: 3rem;
+}
+
+h1 {
+    font-size: 300%
+}
+
+
+body {
+    background-color: var(--white-background);
+}
+
+section {
+    display: flex;
+    justify-content: center;
+    margin-top: 3rem;
+}
+
+
+.content-panel {
+    background-color: var(--content-panel);
+    max-width: 90%;
+    padding: 2rem;
+    margin-bottom: 5rem;
+
+}
+
+.text-data {
+    padding: 1rem;
+    display: flex;
+    justify-content: space-evenly;
+}
+
+.pie-chart {
+
+    padding-top: 3rem;
+    width: 40%;
+    height: 40%;
+
+}
+
+.chart-container {
+    display: flex;
+    justify-content: center;
+}
+
+#table-panel {
+    text-align: center;
+}
+
+.content-header {
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 10px;
+}
+
+.btn {
+    background-color: var(--button);
+    color: white;
+
+}
+
+.btn:hover {
+    background-color: #6c6e87;
+    color: white;
+}
+
+thead {
+    background-color: var(--table-row-2);
+}
+th{
+    text-align: center;
+}
+
+#remove-item-btn{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+#new-item-btn {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+
+p {
+    margin: 0;
+    padding: 0;
+    font-size: large;
+}
+
+.content-footer {
+    display: flex;
+    justify-content: center;
+}
+
+
+
+
+
+.popup {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.5);
+    backdrop-filter: blur(4px);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    visibility: hidden;
+}
+
+.popup-frame {
+    background: #fff;
+    padding: 20px;
+    border-radius: 5px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+}
+
+.popup.show {
+    visibility: visible;
+}
+
+.popup-header {
+    display: flex;
+    justify-content: flex-end;
+    margin-bottom:3px;
+    padding: 0;
+}
+
+.btn-div{
+    display: flex;
+    justify-content: center;
+    padding-bottom: 1rem;
+}
+
+.popup-footer {
+    display: flex;
+    justify-content: center;
+}
